--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.9",
     "react-is": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
     "sinon": "^12.0.1"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.32.0",
