--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "jquery": "^3.6.0",
     "jquery-html5-validity": "^1.1.2",
     "jsdom": "^16.7.0",
     "jsdom-global": "^3.0.2",
+    "mongoose": "^6.1.1",
+    "mongoose-sequence": "^5.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
