--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@types/jest": "^27.0.3",
+    "@types/supertest": "^2.0.11",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.23.0",
+    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -34,7 +37,9 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
-    "sinon": "^12.0.1"
+    "sinon": "^12.0.1",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
