--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom-global": "^3.0.2",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.2",
+    "newrelic": "^8.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
