--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery-html5-validity": "^1.1.2",
     "jsdom": "^16.7.0",
     "jsdom-global": "^3.0.2",
+    "mongodb": "^4.2.2",
     "mongoose": "^6.1.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -53,11 +54,12 @@
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-webpack-plugin": "^3.0.1",
-    "jest": "^27.3.1",
+    "jest": "^27.4.7",
     "jest-react-hooks-shallow": "^1.5.1",
     "msw": "^0.35.0",
     "nodemon": "^2.0.14",
     "react-test-renderer": "^17.0.2",
+    "supertest": "^6.1.6",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
   },
