--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "jquery-html5-validity": "^1.1.2",
     "jsdom": "^16.7.0",
     "jsdom-global": "^3.0.2",
+    "k6": "0.0.0",
     "mongoose": "^6.1.1",
     "mongoose-sequence": "^5.3.1",
+    "newrelic": "^8.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
