--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "cookie-parser": "^1.4.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "fs": "^0.0.1-security",
     "jquery": "^3.6.0",
     "jquery-html5-validity": "^1.1.2",
     "jsdom": "^16.7.0",
     "jsdom-global": "^3.0.2",
     "k6": "0.0.0",
+    "mongodb": "^4.3.0",
     "mongoose": "^6.1.1",
     "mongoose-sequence": "^5.3.1",
     "newrelic": "^8.7.0",
@@ -38,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "redis": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "sinon": "^12.0.1",
     "supertest": "^6.1.6",
