--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "redis": "^4.0.2",
     "regenerator-runtime": "^0.13.9",
     "sinon": "^12.0.1"
   },
