--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server/index.js",
     "build": "webpack --mode production -w",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "redis": "redis-server"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
